@@ -49,6 +49,8 @@
 #'          as they are provided by the \code{\link{summary}} function.
 #' @param pvaluesAsNumbers If \code{TRUE}, p-values are shown as numbers. If \code{FALSE} (default),
 #'          p-values are indicated by asterisks.
+#' @param pvaluesApaStyle if both \code{pvaluesAsNumbers} and \code{pvaluesApaStyle} are \code{TRUE}, p-values
+#'          smaller than 0.001 are abbreviated as \code{p < 0.001}. Else, the p-value is rounded to \code{0.000}.
 #' @param boldpvalues If \code{TRUE} (default), significant p-values are shown bold faced.
 #' @param showConfInt If \code{TRUE} (default), the confidence intervall is also printed to the table. Use
 #'          \code{FALSE} to omit the CI in the table.
@@ -213,6 +215,7 @@ sjt.glm <- function (...,
                      digits.summary=3,
                      exp.coef=TRUE,
                      pvaluesAsNumbers=FALSE,
+                     pvaluesApaStyle=TRUE,
                      boldpvalues=TRUE,
                      showConfInt=TRUE,
                      showStdError=FALSE,
@@ -439,7 +442,7 @@ sjt.glm <- function (...,
       lab <- autoSetVariableLabels(fit$model[, i])
       # if not, use coefficient name
       if (is.null(lab)) {
-        lab <- row.names(coeffs)[-1][i]
+        lab <- row.names(coeffs)[i]
       }
       labelPredictors <- c(labelPredictors, lab)
     }
@@ -465,9 +468,23 @@ sjt.glm <- function (...,
     })
   }
   else {
+    if (boldpvalues) {
+      sb1 <- "<b>"
+      sb2 <- "</b>"
+    }
+    else {
+      sb1 <- sb2 <- ""
+    }
     pv <- apply(pv, c(1,2), function(x) {
-      if (x <0.05 && boldpvalues) {
-        x <- sprintf("<b>%.*f</b>", digits.p, x)      }
+      if (x <0.05) {
+        if (x < 0.001 && pvaluesApaStyle) {
+          x <- sprintf("%s&lt;&nbsp;0.001%s", sb1, sb2)
+        }
+        else {
+          x <- sprintf("%s%.*f%s", sb1, digits.p, x, sb2)
+        }
+        
+      }
       else {
         x <- sprintf("%.*f", digits.p, x) 
       }
