@@ -12,12 +12,12 @@ sjt.glm(..., file = NULL, labelPredictors = NULL,
   stringOR = "OR", stringCI = "CI", stringSE = "std. Error",
   stringP = "p", digits.est = 2, digits.p = 3, digits.ci = 2,
   digits.se = 2, digits.summary = 3, exp.coef = TRUE,
-  pvaluesAsNumbers = FALSE, boldpvalues = TRUE, showConfInt = TRUE,
-  showStdError = FALSE, separateConfColumn = FALSE, newLineConf = TRUE,
-  showAbbrHeadline = TRUE, showPseudoR = TRUE, showLogLik = FALSE,
-  showAIC = FALSE, showChi2 = FALSE, showFamily = FALSE,
-  cellSpacing = 0.2, encoding = NULL, CSS = NULL, useViewer = TRUE,
-  no.output = FALSE)
+  pvaluesAsNumbers = FALSE, pvaluesApaStyle = TRUE, boldpvalues = TRUE,
+  showConfInt = TRUE, showStdError = FALSE, separateConfColumn = FALSE,
+  newLineConf = TRUE, showAbbrHeadline = TRUE, showPseudoR = TRUE,
+  showLogLik = FALSE, showAIC = FALSE, showChi2 = FALSE,
+  showFamily = FALSE, cellSpacing = 0.2, encoding = NULL, CSS = NULL,
+  useViewer = TRUE, no.output = FALSE)
 }
 \arguments{
 \item{...}{One or more fitted \code{\link{glm}}-objects.}
@@ -74,6 +74,9 @@ as they are provided by the \code{\link{summary}} function.}
 
 \item{pvaluesAsNumbers}{If \code{TRUE}, p-values are shown as numbers. If \code{FALSE} (default),
 p-values are indicated by asterisks.}
+
+\item{pvaluesApaStyle}{if both \code{pvaluesAsNumbers} and \code{pvaluesApaStyle} are \code{TRUE}, p-values
+smaller than 0.001 are abbreviated as \code{p < 0.001}. Else, the p-value is rounded to \code{0.000}.}
 
 \item{boldpvalues}{If \code{TRUE} (default), significant p-values are shown bold faced.}
 
