@@ -2,6 +2,11 @@ Version 1.6.7
 ------------------------------------------------------------------------------
 Changes to functions:
 * Added parameter "vars" to "sjp.glmer" and "sjp.lmer" to plot probability curves only for selected variables.
+* Added parameter "pvaluesApaStyle" to various functions. If this parameter is TRUE, p-values less than 0.001 will be indicates as "p < 0.001" instead of being rounded to "p = 0.000".
+
+Bug fixes:
+* Fixed bug with type = "dots" in "sjp.grpfrq".
+* Fixex bug with predictor labelling in "sjp.lm" and "sjp.glm" when parameter "labelPredictors" was not used.
 
 
 Version 1.6.5
